read data profile

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -82,7 +82,7 @@
                 android:layout_marginTop="40dp"
                 android:orientation="vertical"
                 android:paddingEnd="15dp"
-                android:background="#FF80000">
+                android:background="#FF8000">
                 <!--
                                 Night Mode
                 -->
@@ -189,7 +189,7 @@
                 android:layout_marginTop="20dp"
                 android:orientation="vertical"
                 android:paddingEnd="15dp"
-                android:background="#FF80000">
+                android:background="#FF8000">
                 <!--
                     Security And Privacy
                 -->
@@ -290,7 +290,7 @@
                 android:layout_marginTop="20dp"
                 android:orientation="vertical"
                 android:paddingEnd="15dp"
-                android:background="#FF80000">
+                android:background="#FF8000">
                 <!--
                     Send Message
                 -->
