update mapbox, hitory

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -82,7 +82,7 @@
                 android:layout_marginTop="40dp"
                 android:orientation="vertical"
                 android:paddingEnd="15dp"
-                android:background="#FF80000">
+                android:background="@color/light_orange">
                 <!--
                                 Name
                 -->
