--- a/app/src/main/res/layout/fragment_delivery.xml
+++ b/app/src/main/res/layout/fragment_delivery.xml
@@ -1,160 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:mapbox="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".mvvm.view.orders.DeliveryFragment"
-    android:id="@+id/fragment_delivery">
-
+    android:id="@+id/fragment_delivery"
+    android:orientation="vertical">
+    <com.mapbox.maps.MapView
+        android:layout_width="match_parent"
+        android:layout_height="360dp"
+        android:id="@+id/map"
+        mapbox:mapbox_cameraTargetLat="21.034620"
+        mapbox:mapbox_cameraTargetLng="105.798671"
+        mapbox:mapbox_cameraZoom="9.0"
+        app:mapbox_resourcesAccessToken="@string/name_access_token"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Trạng thái đơn hàng: "
+            android:backgroundTint="@color/light_orange"
+            android:textSize="20dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Thông tin địa chỉ đơn hàng "
+            android:backgroundTint="@color/light_orange"
+            android:textSize="20dp"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
+
             <TextView
+
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/light_orange"
+                android:text="Địa chỉ:  "
+                android:textSize="20dp" />
+            <TextView
+                android:id="@+id/txtAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Trạng thái đơn hàng: "
+
+                android:textSize="20dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
                 android:backgroundTint="@color/light_orange"
-                android:textSize="20dp"/>
-
-<!--            <com.mapbox.maps.MapView-->
-<!--                android:id="@+id/map"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content" />-->
-
+                android:text="Tên món "
+                android:textSize="20dp" />
+            <TextView
+                android:id="@+id/txtnameFood"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/light_orange"
+                android:textSize="20dp" />
 
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <TextView
-                android:layout_width="match_parent"
+
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
-                android:text="Thông tin địa chỉ đơn hàng "
                 android:backgroundTint="@color/light_orange"
-                android:textSize="20dp"/>
-            <LinearLayout
+                android:text="Giá tiền: "
+                android:textSize="20dp" />
+            <TextView
+                android:id="@+id/txtPrice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-
-                    android:layout_width="180dp"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/light_orange"
-                    android:text="Địa chỉ:  "
-                    android:textSize="20dp" />
-                <TextView
-                    android:id="@+id/txtAddress"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/light_orange"
-                    android:textSize="20dp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-
-                    android:layout_width="180dp"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/light_orange"
-                    android:text="Tên món "
-                    android:textSize="20dp" />
-                <TextView
-                    android:id="@+id/txtnameFood"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/light_orange"
-                    android:textSize="20dp" />
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-
-                    android:layout_width="180dp"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/light_orange"
-                    android:text="Giá tiền: "
-                    android:textSize="20dp" />
-                <TextView
-                    android:id="@+id/txtPrice"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/light_orange"
-                    android:textSize="20dp" />
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-
-                    android:layout_width="180dp"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/light_orange"
-                    android:text="Số lượng:  "
-                    android:textSize="20dp" />
-                <TextView
-                    android:id="@+id/txtAmount"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/light_orange"
-                    android:textSize="20dp" />
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-
-                    android:layout_width="180dp"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/light_orange"
-                    android:text="Tổng tiền:  "
-                    android:textSize="20dp" />
-                <TextView
-                    android:id="@+id/txtTotal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/light_orange"
-                    android:textSize="20dp" />
-
-            </LinearLayout>
+                android:backgroundTint="@color/light_orange"
+                android:textSize="20dp" />
 
         </LinearLayout>
-
-
-        <Button
-            android:id="@+id/btnReceived"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Đã Nhận Hàng"
-            android:textStyle="italic"
-            android:textSize="20dp"
-            android:backgroundTint="@color/drank_orange"/>
+            android:orientation="horizontal">
 
+            <TextView
 
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/light_orange"
+                android:text="Số lượng:  "
+                android:textSize="20dp" />
+            <TextView
+                android:id="@+id/txtAmount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/light_orange"
+                android:textSize="20dp" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/light_orange"
+                android:text="Tổng tiền:  "
+                android:textSize="20dp" />
+            <TextView
+                android:id="@+id/txtTotal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/light_orange"
+                android:textSize="20dp" />
+
+        </LinearLayout>
 
     </LinearLayout>
-</FrameLayout>
+    <Button
+        android:id="@+id/btnReceived"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Đã Nhận Hàng"
+        android:textStyle="italic"
+        android:textSize="20dp"
+        />
+</LinearLayout>
