--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -33,8 +33,13 @@
             android:id="@+id/buttonLogout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="350dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+
+            android:layout_marginStart="355dp"
+            android:layout_marginRight="0dp"
             android:clickable="true"
+            android:contentDescription="@string/Hello"
             android:outlineAmbientShadowColor="#00FFFFFF"
             android:outlineSpotShadowColor="#00FFFFFF"
             android:src="@drawable/log_out"
