--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -76,13 +76,15 @@
                 android:textSize="22sp"
                 android:textStyle="bold" />
 
-            <TextView
+            <EditText
+                android:id="@+id/editTextChangeAvatar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="#UserID"
+                android:text="Input avatar url..."
                 android:textColor="#000000"
-                android:textSize="12sp"/>
+                android:textSize="12sp"
+                android:importantForAutofill="no" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/buttonChangeAvatar"
