--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mvvm.view.CartFragment">
+    tools:context=".mvvm.view.shoppingcart.CartFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -18,10 +18,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:text="Shopping Cart"
+                android:text="Giỏ hàng"
                 android:textSize="26sp"
                 android:textStyle="bold"
-                android:textColor="@color/drank_orange"
+                android:textColor="@color/white"
+                android:background="@color/drank_orange"
                 android:textAlignment="center"
                 android:padding="10dp"
                 android:layout_width="match_parent"
@@ -30,7 +31,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewCart"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"/>
             <LinearLayout
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal"
@@ -39,7 +40,8 @@
                 <TextView
                     android:layout_weight="1"
                     android:textColor="@color/black"
-                    android:text="Item Total"
+                    android:text=" Tổng tiền"
+                    android:layout_marginStart="10sp"
                     android:textStyle="bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -50,7 +52,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="15sp"
                     android:layout_weight="1"
-                    android:text="135,000 VND"
+                    android:text="0 VND"
                     android:textAlignment="textEnd"
                     android:textColor="@color/black"
                     android:textSize="15sp"
@@ -63,9 +65,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="25sp"
                 android:layout_marginTop="25sp"
+                android:layout_marginBottom="30sp"
                 android:layout_marginEnd="25sp"
                 android:background="@drawable/bottom_c"
-                android:text="Checkout"
+                android:text="Thanh toán"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
         </LinearLayout>
