--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -31,13 +31,12 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/buttonLogout"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_alignParentRight="true"
-
-            android:layout_marginStart="355dp"
-            android:layout_marginRight="0dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="300sp"
+            android:layout_marginEnd="0dp"
             android:clickable="true"
             android:contentDescription="@string/Hello"
             android:outlineAmbientShadowColor="#00FFFFFF"
@@ -97,7 +96,7 @@
                 android:paddingEnd="30dp"
                 android:text="Change your avatar"
                 android:textAllCaps="false"
-                android:textColor="#4A148C" />
+                android:textColor="#4A148C"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
