--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -97,8 +97,10 @@
 
     android:layout_margin="8dp">
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <ImageView
             android:id="@+id/image_cart"
             app:layout_constraintTop_toTopOf="parent"
@@ -119,14 +121,21 @@
             android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/textViewPrice"
-            android:text="30,000 VND"
+            android:text="0 VND"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:textColor="@color/black"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="40sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+        <ImageView
+            android:id="@+id/delete"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="15sp"
+            android:layout_height="15sp"
+            android:src="@drawable/delete"/>
         <ImageView
             android:id="@+id/minus"
             android:src="@drawable/minus"
@@ -158,12 +167,12 @@
             android:layout_height="25dp"/>
         <TextView
             android:id="@+id/textViewSum"
-            android:text="90,000 VND"
+            android:text="0 VND"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:textColor="@color/black"
             android:layout_marginBottom="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="40sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
