--- a/app/src/main/res/layout/fragment_delivery.xml
+++ b/app/src/main/res/layout/fragment_delivery.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:mapbox="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".mvvm.view.orders.DeliveryFragment"
@@ -10,7 +10,8 @@
     android:orientation="vertical">
     <com.mapbox.maps.MapView
         android:layout_width="match_parent"
-        android:layout_height="360dp"
+        android:layout_height="400dp"
+
         android:id="@+id/map"
         mapbox:mapbox_cameraTargetLat="21.034620"
         mapbox:mapbox_cameraTargetLng="105.798671"
@@ -70,56 +71,17 @@
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/light_orange"
-                android:text="Tên món "
+                android:text="Thời Gian"
                 android:textSize="20dp" />
             <TextView
-                android:id="@+id/txtnameFood"
+                android:id="@+id/txt_DateTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/light_orange"
                 android:textSize="20dp" />
 
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
-            <TextView
-
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/light_orange"
-                android:text="Giá tiền: "
-                android:textSize="20dp" />
-            <TextView
-                android:id="@+id/txtPrice"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/light_orange"
-                android:textSize="20dp" />
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/light_orange"
-                android:text="Số lượng:  "
-                android:textSize="20dp" />
-            <TextView
-                android:id="@+id/txtAmount"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/light_orange"
-                android:textSize="20dp" />
-
-        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
