--- a/app/src/main/res/layout/fragment_delivery.xml
+++ b/app/src/main/res/layout/fragment_delivery.xml
@@ -7,6 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".mvvm.view.orders.DeliveryFragment"
     android:id="@+id/fragment_delivery"
+    android:background="@color/white"
     android:orientation="vertical">
     <com.mapbox.maps.MapView
         android:layout_width="match_parent"
