--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/product"
+    android:background="@color/white"
     tools:context=".mvvm.view.productdetail.ProductDetailFragment">
     <!-- TODO: Update blank fragment layout -->
     <Button
