--- a/app/src/main/res/layout/activity_enter_otp.xml
+++ b/app/src/main/res/layout/activity_enter_otp.xml
@@ -16,6 +16,7 @@
         android:background="@drawable/edittext"
         android:ems="10"
         android:hint="Enter your OTP sent to"
+        android:text="123456"
         android:inputType="textPersonName"
         android:padding="8dp"
         app:layout_constraintStart_toStartOf="parent"
