--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,17 +7,6 @@
     android:background="@drawable/backgr"
     tools:context=".mvvm.viewmodels.login.LoginActivity">
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="185dp"
-        android:layout_height="82dp"
-        android:layout_marginTop="68dp"
-        android:text="ood"
-        android:textColor="#FFFFFF"
-        android:textSize="60sp"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <EditText
         android:id="@+id/edt_phone_number"
         android:layout_width="300dp"
@@ -29,6 +18,7 @@
         android:hint="Phonenumber"
         android:inputType="textPersonName"
         android:padding="8dp"
+        android:text="+10000000000"
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
@@ -58,14 +48,16 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="180dp"
-        android:layout_height="82dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="68dp"
-        android:text="TastyF"
+        android:layout_width="288dp"
+        android:layout_height="77dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="72dp"
+        android:text="PTTKHĐT"
         android:textSize="60sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/black"
+        />
 
     <TextView
         android:id="@+id/textView7"
